<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main App -->
    <string name="app_name">SmartLock</string>
    <string name="action_settings">Settings</string>

    <!-- Drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <!-- Drawer Items -->
    <string-array name="menu_title_array">
        <item>Main</item>
        <item>Lock Screens</item>
        <item>Stored Details</item>
        <item>Other</item>
    </string-array>

    <string-array name="menu_items_array">
        <item>Profiles</item>
        <item>Triggers</item>
        <item>Activity Log</item>

        <item>Passwords</item>
        <item>Biometrics</item>
        <item>NFC</item>

        <item>Locations</item>
        <item>Networks</item>
        <item>Bluetooth Devices</item>

        <item>About</item>
        <item>Advanced Settings</item>
        <item>Help</item>
    </string-array>

    <!-- Profiles -->
    <string name="profiles_intro">A list of current available profiles:</string>
    <string name="profiles_title">Title</string>
    <string name="profiles">This is the profiles page</string>
    <string name="profiles_default_none">This is the profiles page...</string>
    <string name="profiles_default_swipe">This is the profiles page...</string>
    <string name="profiles_default_pattern">This is the profiles page...</string>
    <string name="profiles_default_pin">This is the profiles page...</string>
    <string name="profiles_default_password">This is the profiles page...</string>
    <string name="profiles_default_nfc">This is the profiles page...</string>
    <string name="profileApplied">was applied!</string>

    <!-- Triggers -->
    <string name="triggers_intro">A list of available triggers.</string>
    <string name="triggers_title">Title</string>
    <string name="triggers">This is the triggers page</string>

    <!-- Activity Log -->
    <string name="activity_log_intro">A log of the latest profile changes.</string>
    <string name="activity_log_title">Title</string>
    <string name="activity_log">This is the activity log...</string>

    <!-- Passwords -->
    <string name="passwords_intro">A list of available passwords.</string>
    <string name="passwords_title">Title</string>
    <string name="passwords">This is the passwords page...</string>

    <!-- Biometrics -->
    <string name="biometrics_intro">A list of available biometrics.</string>
    <string name="biometrics_title">Title</string>
    <string name="biometrics">This is the biometrics page...</string>

    <!-- NFC -->
    <string name="nfc_intro">A list of stored NFC devices.</string>
    <string name="nfc_title">Title</string>
    <string name="nfc">This is the NFC page...</string>

    <!-- Locations -->
    <string name="locations_intro">A list of stored locations.</string>
    <string name="locations_title">Title</string>
    <string name="locations">This is the locations page...</string>

    <!-- Networks -->
    <string name="networks_intro">A list of stored networks.</string>
    <string name="networks_title">Title</string>
    <string name="networks">This is the networks page...</string>

    <!-- Devices -->
    <string name="devices_intro">A list of stored bluetooth devices.</string>
    <string name="devices_title">Title</string>
    <string name="devices">This is the devices page...</string>

    <!-- About Page -->
    <string name="about_name"><b>SmartLock</b></string>
    <string name="about_copyright">Copyright &#169; 2014 by David Norton</string>
    <string name="about_version">Version 0.0.2</string>
    <string name="about_website"><a href="http://www.davidnorton.net">http://www.davidnorton.net</a></string>
    <string name="about_bug_title">Report Bug or Suggest Feature</string>
    <string name="about_bug_website">Visit the following link for a list of known issues: <a href="https://github.com/piemasters/SecurityApp/issues">https://github.com/piemasters/SecurityApp/issues</a>.</string>
    <string name="about_bug_contact">To report a bug or an enhancement, please contact <a href="david2.norton@live.uwe.ac.uk">david2.norton@live.uwe.ac.uk</a></string>
    <string name="about_uwe">UWE</string>
    <string name="about_uwe_description">This application is a Computer Security final year project at the University of the West of England. It is currently in the alpha phase of development. </string>

    <!-- Advanced Settings -->
    <string name="advanced_settings_intro">Below are the advanced settings:</string>
    <string name="pref_title_notification">Enable Permanent Notification</string>
    <string name="pref_description_notification">Enables permanent status bar notification to view current profile.</string>
    <string name="pref_title_dark_theme">Dark Theme</string>
    <string name="pref_on_dark_theme">Dark theme is enabled.</string>
    <string name="pref_off_dark_theme">Dark theme is disabled.</string>

    <!-- Help -->
    <string name="help_faq">F.A.Q</string>
    <string name="help_question_01">What is a profile?</string>
    <string name="help_answer_01">Profiles allow you to configure a range of different lock screens with different security levels. Other settings can also be configured, such as connectivity, display and sound settings. These profiles can be set to dynamically activate using triggers.</string>
    <string name="help_question_02">What is a trigger?</string>
    <string name="help_answer_02">Triggers control when Profiles are activated. Triggers include time, entering and leaving defined locations, connecting to a network and scanning a configured device.</string>
    <string name="help_question_03">What lock screen security methods are available?</string>
    <string name="help_answer_03"><ul>
                                    <li>None\n</li>
                                    <li>Swipe\n</li>
                                    <li>Pattern\n</li>
                                    <li>PIN\n</li>
                                    <li>Password\n</li>
                                    <li>Biometrics (Fingerprint, Face Recognition)\n</li>
                                    <li>NFC (Scan NFC tag or wearable to unlock)\n</li>
                                  </ul>
     </string>

    <!-- Notifications -->
    <string name="notification_title">Current Profile</string>
    <string name="notification_content">Touch to change profile</string>

    <!-- Other -->
    <string name="textListDialogTitle">Choose a profile</string>
    <string name="settings">Settings</string>

</resources>
