<ScrollView
    style="@style/ScrollView"
    android:id="@+id/activityView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/RelativeLayout"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MyActivity">

        <!-- Title Card -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardView"
            android:id="@+id/card_1">

            <!-- About Icon -->
            <ImageView
                android:id="@+id/about_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/about_icon" />

            <!-- About Title -->
            <TextView
                style="@style/TextView.Title"
                android:id="@+id/about_title" />

            <!--Text Container -->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/LinearLayout.TopCard"
                xmlns:tools="http://schemas.android.com/tools"
                tools:context=".MyActivity">

                <!-- Application Name -->
                <TextView
                    style="@style/TextView.Paragraph.SubTitle"
                    android:id="@+id/about_name"
                    android:text="@string/about_name"/>

                <!-- Copyright -->
                <TextView
                    style="@style/TextView"
                    android:id="@+id/about_copyright"
                    android:text="@string/about_copyright"/>

                <!-- Version -->
                <TextView
                    style="@style/TextView"
                    android:id="@+id/about_version"
                    android:text="@string/about_version"/>

                <!-- Website -->
                <TextView
                    style="@style/TextView.Paragraph"
                    android:id="@+id/about_website"
                    android:autoLink="web"
                    android:text="@string/about_website"/>

                <!-- Bug Title -->
                <TextView
                    style="@style/TextView.Paragraph.SubTitle"
                    android:id="@+id/bug_title"
                    android:text="@string/about_bug_title"/>

                <!-- Bug Website -->
                <TextView
                    style="@style/TextView.Paragraph"
                    android:id="@+id/bug_website"
                    android:autoLink="web"
                    android:text="@string/about_bug_website"/>

                <!-- Bug Contact -->
                <TextView
                    style="@style/TextView"
                    android:id="@+id/bug_contact"
                    android:autoLink="email"
                    android:text="@string/about_bug_contact"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardView"
            android:id="@+id/card_2"
            android:layout_below="@+id/card_1">

            <!--Text Container -->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/LinearLayout"
                xmlns:tools="http://schemas.android.com/tools"
                tools:context=".MyActivity">

                <!-- UWE -->
                <TextView
                    style="@style/TextView.Paragraph.SubTitle"
                    android:id="@+id/about_uwe"
                    android:text="@string/about_uwe"/>

                <!-- UWE Description -->
                <TextView
                    style="@style/TextView"
                    android:id="@+id/about_uwe_description"
                    android:text="@string/about_uwe_description"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>

