<ScrollView
    style="@style/ScrollView"
    android:id="@+id/activityView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/RelativeLayout"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MyActivity">

        <!-- Title Card -->
        <android.support.v7.widget.CardView
            style="@style/CardView"
            android:id="@+id/card_1">

            <!-- About Icon -->
            <ImageView
                android:id="@+id/help_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!-- About Title -->
            <TextView
                style="@style/TextView.Title"
                android:id="@+id/help_title" />

            <!--Text Container -->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/LinearLayout.TopCard"
                xmlns:tools="http://schemas.android.com/tools"
                tools:context=".MyActivity">

                <!-- Application Name -->
                <TextView
                    style="@style/TextView.Paragraph.SubTitle"
                    android:id="@+id/help_faq"
                    android:text="@string/help_faq"/>

                <!-- Question 01 -->
                <TextView
                    style="@style/TextView.Paragraph.Bold"
                    android:layout_below="@id/help_faq"
                    android:id="@+id/help_question_01"
                    android:text="@string/help_question_01"/>

                <!-- Answer 01 -->
                <TextView
                    style="@style/TextView.Paragraph"
                    android:layout_below="@id/help_question_01"
                    android:id="@+id/help_answer_01"
                    android:text="@string/help_answer_01"/>

                <!-- Question 02 -->
                <TextView
                    style="@style/TextView.Paragraph.Bold"
                    android:layout_below="@id/help_answer_01"
                    android:id="@+id/help_question_02"
                    android:text="@string/help_question_02"/>

                <!-- Answer 02 -->
                <TextView
                    style="@style/TextView.Paragraph"
                    android:layout_below="@id/help_question_02"
                    android:id="@+id/help_answer_02"
                    android:text="@string/help_answer_02"/>

                <!-- Question 03 -->
                <TextView
                    style="@style/TextView.Paragraph.Bold"
                    android:layout_below="@id/help_answer_02"
                    android:id="@+id/help_question_03"
                    android:text="@string/help_question_03"/>

                <!-- Answer 03 -->
                <TextView
                    style="@style/TextView.Paragraph"
                    android:layout_below="@id/help_question_02"
                    android:id="@+id/help_answer_03"
                    android:text="@string/help_answer_03"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>

