<ScrollView
    style="@style/ScrollView"
    android:id="@+id/activityView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/RelativeLayout"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MyActivity">

        <!-- Title Card -->
        <android.support.v7.widget.CardView
            style="@style/CardView"
            android:id="@+id/card_1">

            <!-- Networks Icon -->
            <ImageView
                android:id="@+id/networks_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!-- Networks Title -->
            <TextView
                style="@style/TextView.Title"
                android:id="@+id/networks_title" />

            <!-- Text Container -->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/LinearLayout.TopCard"
                xmlns:tools="http://schemas.android.com/tools"
                tools:context=".MyActivity">

                <!-- Networks Description -->
                <TextView
                    style="@style/TextView"
                    android:id="@+id/networks_intro"
                    android:text="@string/networks_intro"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Card 2 -->
        <android.support.v7.widget.CardView
            style="@style/CardView"
            android:id="@+id/card_2"
            android:layout_below="@+id/card_1">

            <!--Text Container -->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/LinearLayout"
                xmlns:tools="http://schemas.android.com/tools"
                tools:context=".MyActivity">

                <!-- Title -->
                <TextView
                    style="@style/TextView.Paragraph.SubTitle"
                    android:id="@+id/networks_title2"
                    android:text="@string/networks_title"/>

                <!-- Description -->
                <TextView
                    style="@style/TextView"
                    android:layout_below="@id/networks_title2"
                    android:id="@+id/networks_text2"
                    android:text="@string/networks"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Card 3 -->
        <android.support.v7.widget.CardView
            style="@style/CardView"
            android:id="@+id/card_3"
            android:layout_below="@+id/card_2">

            <!--Text Container -->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/LinearLayout"
                xmlns:tools="http://schemas.android.com/tools"
                tools:context=".MyActivity">

                <!-- Title -->
                <TextView
                    style="@style/TextView.Paragraph.SubTitle"
                    android:id="@+id/networks_title3"
                    android:text="@string/networks_title"/>

                <!-- Description -->
                <TextView
                    style="@style/TextView"
                    android:layout_below="@id/networks_title3"
                    android:id="@+id/networks_text3"
                    android:text="@string/networks"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Card 4 -->
        <android.support.v7.widget.CardView
            style="@style/CardView"
            android:id="@+id/card_4"
            android:layout_below="@+id/card_3">

            <!--Text Container -->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/LinearLayout"
                xmlns:tools="http://schemas.android.com/tools"
                tools:context=".MyActivity">

                <!-- Title -->
                <TextView
                    style="@style/TextView.Paragraph.SubTitle"
                    android:id="@+id/networks_title4"
                    android:text="@string/networks_title"/>

                <!-- Description -->
                <TextView
                    style="@style/TextView"
                    android:layout_below="@id/networks_title4"
                    android:id="@+id/networks_text4"
                    android:text="@string/networks"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>